--- a/package.json
+++ b/package.json
@@ -13,6 +13,12 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql": "github:mysqljs/mysql"
+    "express-bearer-token": "^2.4.0",
+    "handlebars": "^4.7.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.2",
+    "multer": "^1.4.2",
+    "mysql": "github:mysqljs/mysql",
+    "nodemailer": "^6.4.13"
   }
 }
